# ffqf

./: .bandit  .cruft.json  .gitattributes  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
src/ffqf/: __init__.py  cli.py
src/ffqf/application/: __init__.py  run_information_application.py
src/ffqf/application/service/: __init__.py  api_settings.py  file_link_service.py  mapping_service.py  request_service.py  run_information_output_writer.py  run_information_service.py  set_builder.py
src/ffqf/domain/: __init__.py
src/ffqf/domain/model/: __init__.py  abstract_accession_set.py  bio_project_set.py  bio_sample_set.py  file_description.py  insdc_experiment_set.py  insdc_run_set.py  insdc_sample_set.py  insdc_study_set.py  insdc_submission_set.py  run_information.py
src/ffqf/infrastructure/application/: cli.py  ena_api_portal_settings.py  ncbi_eutils_settings.py
src/ffqf/infrastructure/application/service/: __init__.py  ena_api_portal_bio_project_mapping_service.py  ena_api_portal_bio_sample_mapping_service.py  ena_api_portal_insdc_experiment_mapping_service.py  ena_api_portal_insdc_run_information_service.py  ena_api_portal_insdc_sample_mapping_service.py  ena_api_portal_insdc_study_mapping_service.py  ena_api_portal_insdc_submission_mapping_service.py  ena_api_portal_request_service.py  ena_api_portal_settings.py  ncbi_eutils_file_link_service.py  ncbi_eutils_request_service.py  ncbi_eutils_settings.py
tests/data/: efetch.fcgi.xml
tests/unit/application/service/: test_request_service.py
tests/unit/domain/model/: test_abstract_accession_set.py
(+14 files in other folders)
