[metadata]
name = ffqf
url = https://github.com/Midnighter/ffqf
download_url = https://pypi.org/project/ffqf/
project_urls =
    Source Code = https://github.com/Midnighter/ffqf
    Documentation = https://ffqf.readthedocs.io
    Bug Tracker = https://github.com/Midnighter/ffqf/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
description = Find FASTQ and FASTA files faster than with ffq.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =

[options]
zip_safe = True
install_requires =
    depinfo
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.package_data]
ffqf =
    py.typed

[options.extras_require]
development =
    black
    isort
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/ffqf/_version.py
versionfile_build = ffqf/_version.py
tag_prefix =

